@@ -110,6 +110,122 @@ xnee_ungrab_keys (xnee_data* xd)
 
 
 
+/**************************************************************
+ *                                                            *
+ * xnee_grab_key                                              *
+ *                                                            *
+ *                                                            *
+ **************************************************************/
+int 
+xnee_grab_key (xnee_data* xd, int mode, char *mod_key)
+{
+  int window;
+  int screen;
+  xnee_km_tuple km;
+
+  xnee_verbose((xd, "----> xnee_grab_key\n"));
+
+  xnee_verbose((xd, "----  xnee_grab_key mod_key=%s\n", mod_key));
+  xnee_get_km_tuple (xd, &km, mod_key);
+  xnee_verbose((xd, "----  xnee_grab_key mod=%d\n", km.modifier));
+
+
+  
+  /* get the key+modifier from xd
+   * corresponding to the mode given */
+  switch (mode)
+    {
+    case XNEE_GRAB_STOP:
+      xd->grab_keys->grab=XNEE_GRAB_SET;
+      xd->grab_keys->stop_key=km.key;
+      xd->grab_keys->stop_mod=km.modifier;
+      xnee_verbose((xd, "----  xnee_grab_key STOP mode\n"));
+      break;
+    case XNEE_GRAB_PAUSE:
+      xd->grab_keys->grab=XNEE_GRAB_SET;
+      xd->grab_keys->pause_key=km.key;
+      xd->grab_keys->pause_mod=km.modifier;
+      xnee_verbose((xd, "----  xnee_grab_key PAUSE mode\n"));
+      break;
+    case XNEE_GRAB_RESUME:
+      xd->grab_keys->grab=XNEE_GRAB_SET;
+      xd->grab_keys->resume_key=km.key;
+      xd->grab_keys->resume_mod=km.modifier;
+      xnee_verbose((xd, "----  xnee_grab_key RESUME mode\n"));
+      break;
+    default:
+      xnee_print_error ("Unknown grab mode\n");
+      return XNEE_UNKNOWN_GRAB_MODE;
+    }
+
+
+  /* make sure we have a display to grab on*/
+  if (xd->grab==NULL)
+    {
+      xd->grab = XOpenDisplay (NULL);
+      if (xd->grab==NULL)
+	{
+	  xnee_verbose((xd, "could not open display for grab...\n"));
+	  return XNEE_NOT_OPEN_DISPLAY;
+	}
+    }
+
+  xnee_set_verbose (xd);
+  
+  /* grab key + modifier */
+  screen = DefaultScreen (xd->grab);
+  window = RootWindow    (xd->grab, screen );
+  xnee_verbose((xd, "grab     %d\n", xd->grab));
+  xnee_verbose((xd, "stop key %d\n", km.key));
+  xnee_verbose((xd, "stop mod %d\n", km.modifier));
+  xnee_verbose((xd, "window   %d\n", window));
+  xnee_verbose((xd, "screen   %d\n", screen));
+  XGrabKey (xd->grab,  
+	    km.key,            
+	    km.modifier,
+	    window,       
+	    False,  
+	    GrabModeSync,
+	    GrabModeSync );
+  xnee_verbose((xd, "<---- xnee_grab_stop_key\n"));
+
+  xnee_unset_verbose (xd);
+  return XNEE_OK;
+}
+
+
+
+int
+xnee_get_grab_mode (xnee_data *xd, int key, int modifier)
+{
+  
+
+
+  if ( (key==xd->grab_keys->stop_key) && 
+       (modifier==xd->grab_keys->stop_mod) )
+    {
+      xnee_verbose ((xd, "xnee_get_grab_mode: STOP \n"));
+      return XNEE_GRAB_STOP;
+    }
+  else if ( (key==xd->grab_keys->pause_key) && 
+	    (modifier==xd->grab_keys->pause_mod) )
+    {
+      xnee_verbose ((xd, "xnee_get_grab_mode: PAUSE \n"));
+      return XNEE_GRAB_PAUSE;
+    }
+  else if ( (key==xd->grab_keys->resume_key) && 
+	    (modifier==xd->grab_keys->resume_mod) )
+    {
+      xnee_verbose ((xd, "xnee_get_grab_mode: RESUME \n"));
+      return XNEE_GRAB_PAUSE;
+    }
+  else 
+   {
+ return XNEE_GRAB_UNKOWN;
+   }
+}
+
+
 
 /**************************************************************
  *                                                            *
@@ -127,6 +243,7 @@ xnee_new_grab_keys()
 
   if (xgk==NULL)
     return NULL;
+
   xgk->stop_key     = 0 ;
   xgk->stop_mod     = 0 ;
 
@@ -136,7 +253,8 @@ xnee_new_grab_keys()
   xgk->resume_key   = 0 ;
   xgk->resume_mod   = 0 ;
 
-  xgk->grab = 0;
+  xgk->grab = XNEE_GRAB_NODATA;
+  xgk->grabbed_action = XNEE_GRAB_NODATA;
 
   return xgk;
 }
